Fixed bug with z-index. Resize images for better performance. Starting header responsivity

--- a/src/header/header.module.css
+++ b/src/header/header.module.css
@@ -16,6 +16,7 @@
 }
 
 .logo {
+    font-size: 20px;
     font-weight: 600;
     display: flex;
     align-items: center;
@@ -31,7 +32,7 @@
     border: none;
     text-decoration: none;
     font-family: Poppins,sans-serif;
-    font-size: 1.2rem;
+    font-size: 20px;
     margin-right: 10px;
     padding: 2px 10px;
     transition: all .27s;
@@ -41,4 +42,53 @@
 .headerButtons a:hover {
     color: #d261fb;
     cursor: pointer;
+}
+
+@media only screen and (min-width: 2561px) {
+    .header {
+        max-height: 140px;
+    }
+    .headerContainer {
+        margin: 35px 98px;
+    }
+
+    .headerButtons a {
+        font-size: 35px;
+    }
+    .logo {
+        font-size: 35px;
+    }
+}
+
+@media only screen and (max-width: 1649.98px) {
+    .headerButtons a {
+        font-size: 18px;
+    }
+    .logo {
+        font-size: 18px;
+    }
+    .headerContainer {
+        margin: 5px 55px;
+    }
+}
+
+@media only screen and (max-width: 767.98px) {
+    .headerButtons a {
+        font-size: 15px;
+    }
+    .logo {
+        font-size: 15px;
+    }
+    .headerContainer {
+        margin: 0 20px 5px;
+    }
+    .headerButtons a {
+        padding: 5px;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+ .headerButtons {
+     display: none;
+ }
 }
