--- a/src/mainContent/Intro/IntroSkills/Icon.module.css
+++ b/src/mainContent/Intro/IntroSkills/Icon.module.css
@@ -65,5 +65,5 @@
     border-radius: 100px;
     padding: 17px 17px;
     margin-right: 22px;
-    z-index: 100;
+    z-index: 50;
 }
